--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -7,10 +7,16 @@
     font-size: 45px;
   }
 
-  .wallet {
+  .navbar {
+    width: 50px;
+  }
+
+  .logo-top {
+    width: 100px;
+  }
+
+  .basket {
     width: 90px;
-    height: 40px;
-    font-size: 10px;
   }
 
   .poster {
@@ -56,7 +62,7 @@
   }
 
   .card-container {
-    height: 600px;
+    height: 430px;
   }
 
   .top-rated {
@@ -66,6 +72,7 @@
   .flower-card {
     width: 240px;
     height: 340px;
+    margin-bottom: 40px;
   }
 
   .flower-button {
@@ -77,16 +84,16 @@
 
   .collection {
     width: 80%;
-    height: 850px;
+    height: 450px;
   }
 
   .collection-card {
     width: 200px;
-    height: 300px;
+    height: 230px;
   }
 
   .collection-card img {
-    width: 240px;
+    width: 210px;
   }
 
   .collection-card h2 {
@@ -198,16 +205,12 @@
   }
 
   .collection {
-    height: 2000px;
+    height: 1200px;
   }
 
   .collection-card {
-    width: 200px;
-    height: 220px;
-  }
-
-  .collection-card img {
-    width: 200px;
+    width: 230px;
+    height: 210px;
   }
 
   .collection-card h2 {
@@ -225,8 +228,27 @@
     height: 600px;
   }
 
+  .card {
+    width: 400px;
+    height: 160px;
+  }
+
+  .card h3 {
+    font-size: 20px;
+  }
+
+  .card p {
+    width: 300px;
+    font-size: 14px;
+  }
+
+  .card img {
+    left: 330px;
+    width: 40px;
+  }
+
   .blogs-container {
-    height: 1900px;
+    height: 1500px;
   }
 
   .instagram img {
@@ -236,16 +258,29 @@
   .blog {
     flex-direction: column;
     justify-content: space-around;
-    height: 1300px;
+    height: 850px;
   }
 
   .info-card {
-    flex-direction: column;
-    width: 250px;
+    flex-direction: row;
+    width: 550px;
+    height: 250px;
+  }
+
+  .info-card h3 {
+    font-size: 18px;
+    margin-left: 10px;
+  }
+
+  .info-card p {
+    font-size: 13px;
+    margin-left: 10px;
   }
 
   .info-card img {
     width: 250px;
+    height: 250px;
+    border-radius: 10px 0px 0px 10px;
   }
 
   .footer-container {
@@ -282,262 +317,334 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
   .container-header {
-    font-size: 40px;
+    font-size: 33px;
   }
 
   .main-container {
-    height: 1200px;
-  }
-  .top {
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: end;
-    height: 300px;
+    height: 750px;
   }
 
-  .wallet {
-    flex-direction: row;
-    justify-content: center;
-    margin-right: 10px;
+  .navbar {
+    width: 30px;
+  }
+
+  .logo-top {
     width: 90px;
-    height: 40px;
-    font-size: 10px;
   }
 
-  .wallet img {
-    top: 10px;
-    right: 7px;
-    width: 15px;
-    height: 15px;
+  .basket {
+    width: 80px;
   }
 
   .poster {
-    height: 600px;
-  }
-
-  .header {
-    justify-content: center;
+    height: 400px;
   }
 
   .header h1 {
-    width: 310px;
-    height: 120px;
-    font-size: 35px;
+    width: 400px;
+    height: 60px;
+    font-size: 30px;
   }
 
   .header h2 {
-    width: 310px;
-    font-size: 15px;
+    width: 300px;
+    font-size: 13px;
   }
 
   .view-button {
-    font-size: 20px;
-    padding: 10px 50px;
+    font-size: 15px;
+    padding: 10px 40px;
   }
 
   .delivery {
     flex-direction: column;
-    margin-left: 10px;
-    height: 300px;
-  }
-
-  .delivery-block {
-    width: 320px;
-  }
-
-  .delivery-block h3 {
-    font-size: 15px;
-  }
-
-  .delivery-block p {
-    font-size: 13px;
-  }
-
-  .delivery-block img {
-    width: 50px;
-    bottom: 50px;
-    left: 240px;
+    margin-left: 20px;
+    height: 200px;
   }
 
   .card-container {
-    height: 1100px;
+    height: 850px;
   }
 
   .top-rated {
-    width: 320px;
+    width: 95%;
   }
 
   .flower-card {
-    width: 150px;
+    width: 180px;
     height: 280px;
   }
 
   .bouquet {
     font-size: 11px;
-    width: 150px;
+    width: 120px;
   }
 
   .price {
-    font-size: 10px;
-  }
-
-  .flower-button {
-    bottom: 0px;
-    left: 23px;
-    padding: 10px 10px;
-    font-size: 13px;
-  }
-
-  .collection {
-    width: 320px;
-    height: 1300px;
-  }
-
-  .collection-card {
-    width: 150px;
-    height: 150px;
-  }
-
-  .collection-card img {
-    width: 150px;
-  }
-
-  .collection-card h2 {
-    font-size: 22px;
-    bottom: 100px;
-  }
-
-  .questions-container {
-    width: 100%;
-    height: 900px;
-  }
-
-  .cards {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 500px;
-  }
-
-  .card {
-    width: 250px;
-    height: 150px;
-  }
-
-  .card h3 {
-    top: 10px;
-    font-size: 15px;
-  }
-
-  .card p {
-    width: 200px;
-    bottom: 40px;
+    padding-top: 10px;
     font-size: 11px;
   }
 
-  .card img {
-    left: 190px;
-    bottom: 30px;
-    width: 40px;
+  .flower-button {
+    bottom: 40px;
+    left: 100px;
+    font-size: 9px;
+    padding: 8px 8px;
+  }
+
+  .flower-button:hover::before {
+    padding: 8px 10px;
+  }
+
+  .collection {
+    width: 90%;
+    height: 1000px;
+  }
+
+  .collection-card {
+    width: 40%;
+    height: 200px;
+  }
+
+  .collection-card img {
+    width: 180px;
+  }
+
+  .collection-card h2 {
+    font-size: 23px;
+    bottom: 130px;
   }
 
   .e-mail {
-    text-align: center;
-    width: 100%;
-    height: 160px;
-  }
-
-  .e-mail h3 {
-    height: 0px;
-    font-size: 20px;
-  }
-
-  .e-mail p {
-    font-size: 12px;
-  }
-
-  .e-mail input {
-    padding: 12px 50px 15px 8px;
-    border-radius: 5px;
-    font-size: 18px;
-  }
-
-  .blogs-container {
-    height: 1900px;
-  }
-
-  .instagram img {
-    width: 310px;
-  }
-
-  .instagram a {
-    font-size: 15px;
+    justify-content: center;
   }
 
   .blog {
     flex-direction: column;
     justify-content: space-around;
-    height: 1300px;
+    height: 850px;
   }
 
   .info-card {
-    flex-direction: column;
-    width: 250px;
+    width: 400px;
+    height: 200px;
+  }
+
+  .info-card h3 {
+    font-size: 15px;
   }
 
   .info-card img {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .container-header {
+    font-size: 25px;
+  }
+
+  .main-container {
+    height: 700px;
+  }
+
+  .navbar {
+    width: 25px;
+  }
+
+  .logo-top {
+    width: 60px;
+  }
+
+  .basket {
+    width: 60px;
+  }
+
+  .header h1 {
     width: 250px;
+    height: 50px;
+    font-size: 22px;
   }
 
-  .address-container {
-    height: 400px;
+  .header h2 {
+    width: 250px;
+    font-size: 10px;
   }
 
-  .text-address {
-    width: 260px;
-    height: 300px;
+  .view-button {
+    font-size: 10px;
+    padding: 8px 30px;
   }
 
-  .text-address h3 {
-    font-size: 20px;
+  .delivery {
+    margin-left: 20px;
+    height: 180px;
   }
 
-  .text-address p {
-    font-size: 13px;
+  .delivery-block h3 {
+    font-size: 12px;
   }
 
-  .footer-container {
-    width: 100%;
+  .delivery-block p {
+    font-size: 10px;
+  }
+
+  .delivery-block img {
+    width: 40px;
+    bottom: 40px;
+    left: 190px;
+  }
+
+  .card-container {
+    height: 2200px;
+  }
+
+  .flower-card {
+    width: 220px;
+    height: 320px;
+  }
+
+  .bouquet {
+    font-size: 11px;
+    width: 120px;
+  }
+
+  .price {
+    padding-top: 10px;
+    font-size: 11px;
+  }
+
+  .flower-button {
+    left: 120px;
+    font-size: 10px;
+    padding: 8px 10px;
+  }
+
+  .flower-button:hover::before {
+    padding: 8px 11px;
+  }
+
+  .collection-container {
     height: 1100px;
   }
 
-  .footer {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
+  .collection {
+    width: 90%;
+    height: 800px;
   }
 
-  .menu p {
+  .collection-card {
+    width: 40%;
+    height: 100px;
+  }
+
+  .collection-card img {
+    width: 130px;
+  }
+
+  .collection-card h2 {
+    font-size: 13px;
+    bottom: 80px;
+  }
+
+  .questions-container {
+    height: 900px;
+  }
+
+  .card {
+    width: 250px;
+    height: 160px;
+  }
+
+  .card h3 {
+    font-size: 14px;
+  }
+
+  .card p {
+    width: 200px;
+    font-size: 11px;
+  }
+
+  .card img {
+    left: 200px;
+    width: 30px;
+  }
+
+  .e-mail h3 {
+    font-size: 20px;
+  }
+
+  .e-mail p {
+    font-size: 12px;
+    text-align: center;
+    width: 220px;
+  }
+
+  .e-mail input {
+    padding: 15px 80px 15px 8px;
+    font-size: 15px;
+  }
+
+  .blogs-container {
+    height: 900px;
+  }
+
+  .header-instagram {
+    width: 220px;
+  }
+
+  .instagram a {
     font-size: 13px;
   }
 
-  .contact-information {
-    font-size: 14px;
-    width: 320px;
-    height: 550px;
+  .instagram img {
+    width: 300px;
+  }
+
+  .info-card {
+    width: 275px;
+    height: 130px;
+  }
+
+  .info-card h3 {
+    font-size: 12px;
+  }
+
+  .info-card p {
+    width: 130px;
+    font-size: 9px;
+  }
+
+  .info-card img {
+    width: 130px;
+    height: 130px;
+  }
+
+  .address-container {
+    margin-top: 90px;
+    height: 500px;
+  }
+
+  .text-address {
+    width: 280px;
+  }
+
+  .text-address h3 {
+    font-size: 18px;
+  }
+
+  .text-address p {
+    font-size: 12px;
   }
 
   .logo {
-    width: 170px;
+    width: 150px;
   }
 
   .payment {
-    width: 310px;
-  }
-
-  .legal-notice p {
-    font-size: 13px;
+    width: 200px;
   }
 }
