--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 1050px;
+  height: 1150px;
 }
 
 .top {
@@ -30,64 +30,20 @@ body {
   height: 140px;
 }
 
-.top img {
-  position: relative;
-  right: 100px;
+.navbar {
+  user-select: none;
+  cursor: pointer;
+  width: 60px;
+}
+
+.logo-top {
+  width: 140px;
+  user-select: none;
+}
+
+.basket {
+  user-select: none;
   width: 120px;
-  height: 120px;
-  user-select: none;
-}
-
-.search-field {
-  width: 300px;
-  vertical-align: middle;
-  white-space: nowrap;
-  position: relative;
-  user-select: none;
-}
-
-.search-field input#search {
-  width: 300px;
-  height: 50px;
-  font-size: 15px;
-  border-radius: 10px;
-  border: none;
-  float: left;
-  padding-left: 45px;
-  transition: background 0.55s ease;
-}
-
-.search-field .icon {
-  position: absolute;
-  top: 30%;
-  margin-left: 17px;
-}
-
-.search-field input#search:hover,
-.search-field input#search:focus,
-.search-field input#search:active {
-  outline: none;
-  background: #ffffff;
-}
-
-.wallet {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100px;
-  height: 50px;
-  font-size: 12px;
-  box-shadow: -1px -1px 4px rgba(0, 0, 0, 0.25), 4px 4px 8px rgba(0, 0, 0, 0.25);
-  user-select: none;
-}
-
-.wallet img {
-  position: relative;
-  top: 10px;
-  right: 7px;
-  width: 15px;
-  height: 15px;
-  user-select: none;
 }
 
 .poster {
@@ -95,7 +51,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 800px;
+  height: 900px;
   background: url(/images/main-background.png);
   background-position: center center;
   background-repeat: no-repeat;
@@ -137,6 +93,7 @@ body {
   border: none;
   filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.25));
   user-select: none;
+  cursor: pointer;
 }
 
 .view-button:hover {
@@ -209,12 +166,14 @@ body {
 }
 
 .bouquet {
-  font-size: 13px;
+  padding-left: 10px;
+  font-size: 14px;
   width: 180px;
   height: 30px;
 }
 
 .price {
+  padding-left: 10px;
   font-size: 13px;
   font-weight: 900;
 }
@@ -232,12 +191,22 @@ body {
   font-size: 17px;
   font-weight: 600;
   user-select: none;
+  cursor: pointer;
 }
 
 .flower-button:hover {
   background: #ffd1d7;
   color: #665f5f;
   transition: 0.5s ease;
+}
+
+.flower-button:before {
+  content: attr(text);
+}
+
+.flower-button:hover::before {
+  content: attr(hover-text);
+  padding: 10px 18px;
 }
 
 .collection-container {
@@ -311,12 +280,14 @@ body {
 .card h3 {
   position: relative;
   top: 20px;
+  left: 15px;
   font-size: 25px;
 }
 
 .card p {
   position: relative;
   width: 300px;
+  left: 15px;
   bottom: 30px;
   font-size: 15px;
 }
